Magento/magento-php.yaml
apiVersion: v1
kind: Service
metadata:
  name: magento-php
  labels:
    app: magento-php
    k8s-app: magento
spec:
  ports:
  - name: "fpm"
    port: 9000
    protocol: TCP
    targetPort: 9000
  selector:
    app: magento-php
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: magento-php
  labels:
    app: magento-php
    k8s-app: magento
spec:
  replicas: 1
  selector:
    matchLabels:
      app: magento-php
  strategy:
    rollingUpdate:
      maxSurge: 50%
      maxUnavailable: 30%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: magento-php
        k8s-app: magento
    spec:
      containers:
      - image: kiweeteam/magento2:vanilla-2.3.2-php7.2-fpm
        imagePullPolicy: IfNotPresent
        name: magento-php
        ports:
        - containerPort: 9000
          protocol: TCP
        readinessProbe:
          failureThreshold: 5
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          tcpSocket:
            port: 9000
          timeoutSeconds: 1
        livenessProbe:
          failureThreshold: 5
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          tcpSocket:
            port: 9000
          timeoutSeconds: 1
        resources:
          limits:
            cpu: 250m
            memory: 1Gi
          requests:
            cpu: 250m
            memory: 1Gi
        volumeMounts:
        - name: logs
          mountPath: /var/www/html/var/log
        - name: media
          mountPath: /var/www/html/pub/media
        - name: static
          mountPath: /var/www/html/pub/static
      - image: busybox
        imagePullPolicy: IfNotPresent
        name: system-log
        command: ["/bin/sh"]
        args:
        - -c
        - |
          touch /var/www/html/var/log/system.log
          chown 33:33 /var/www/html/var/log/system.log
          tail -n+1 -f /var/www/html/var/log/system.log
        resources:
          limits:
            cpu: 5m
            memory: 64Mi
          requests:
            cpu: 5m
            memory: 64Mi
        volumeMounts:
        - name: logs
          mountPath: /var/www/html/var/log
      - image: busybox
        imagePullPolicy: IfNotPresent
        name: exception-log
        command: ["/bin/sh"]
        args:
        - -c
        - |
          touch /var/www/html/var/log/exception.log
          chown 33:33 /var/www/html/var/log/exception.log
          tail -n+1 -f /var/www/html/var/log/exception.log
        resources:
          limits:
            cpu: 5m
            memory: 64Mi
          requests:
            cpu: 5m
            memory: 64Mi
        volumeMounts:
        - name: logs
          mountPath: /var/www/html/var/log
      - image: busybox
        imagePullPolicy: IfNotPresent
        name: debug-log
        command: ["/bin/sh"]
        args:
        - -c
        - |
          touch /var/www/html/var/log/debug.log
          chown 33:33 /var/www/html/var/log/debug.log
          tail -n+1 -f /var/www/html/var/log/debug.log
        resources:
          limits:
            cpu: 5m
            memory: 64Mi
          requests:
            cpu: 5m
            memory: 64Mi
        volumeMounts:
        - name: logs
          mountPath: /var/www/html/var/log
      volumes:
      - name: logs
        emptyDir: {}
      - name: media
        persistentVolumeClaim:
          claimName: media
      - name: static
        persistentVolumeClaim:
          claimName: static
